--- a/front/src/app/modules/Manager/Sections/status/status-list/status-list.component.html
+++ b/front/src/app/modules/Manager/Sections/status/status-list/status-list.component.html
@@ -1,4 +1,4 @@
-<h1 fxLayoutAlign="center center" fxLayoutGap="10px" style="color:rgb(160, 158, 158)">Task Details</h1>
+<h1 fxLayoutAlign="center center" fxLayoutGap="10px" style="color:rgb(160, 158, 158)">Statuses</h1>
 <div fxLayout fxLayoutAlign="center center">
   <mat-form-field fxFlex="40%">
     <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filter">
@@ -6,24 +6,14 @@
 </div>
 
 <table mat-table [dataSource]="dataSource" matSort>
-  <ng-container matColumnDef="task_ID">
+  <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
-    <td mat-cell *matCellDef="let element"> {{element.task_ID}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
   </ng-container>
 
-  <ng-container matColumnDef="task_Status">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-    <td mat-cell *matCellDef="let element"> {{element.task_Status.description}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="incident">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Incident Id </th>
-    <td mat-cell *matCellDef="let element"> {{element.incident.id}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="technician">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Technician </th>
-    <td mat-cell *matCellDef="let element"> {{element.technician.lastName}} {{element.technician.firstName}} </td>
+  <ng-container matColumnDef="description">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+    <td mat-cell *matCellDef="let element"> {{element.description}} </td>
   </ng-container>
 
   <ng-container matColumnDef="details">
@@ -47,6 +37,7 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+
 
 <mat-paginator [pageSize]="5" [pageSizeOptions]="[5, 10, 20, 50, 100]">
 </mat-paginator>
